Increase MaxPermSize to 128m for tests