@@ -400,6 +400,7 @@
                             <jvmArgs>
                                 <param>-Xmx512m</param>
                                 <param>-Xss256k</param>
+                                <param>-XX:MaxPermSize=128m</param>
                                 <param>-XX:MaxDirectMemorySize=512m</param>
                                 <param>-Des.logger.prefix=</param>
                             </jvmArgs>
